--- a/5.npm-parcel/package.json
+++ b/5.npm-parcel/package.json
@@ -2,8 +2,9 @@
   "name": "5.npm-parcel",
   "version": "1.0.0",
   "description": "",
- 
+  "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
